# qubic-cli

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.md  K12AndKeyUtil.h  K12AndKeyUtil_aarch64.h  K12AndKeyUtil_amd64.h  LICENSE.md  QVAULT.cpp  QVAULT.h  README.md  SCUtils.cpp  SCUtils.h  argparser.h  assetUtil.h  assetUtils.cpp  asset_utils.cpp  asset_utils.h  bxid.cpp  commonFunctions.h  connection.cpp  connection.h  contracts.cpp  contracts.h  defines.h  escrow.cpp  escrow.h  fileUpload.cpp  file_upload.cpp  fourq-qubic.cpp  fourq-qubic.h  fourq_qubic.cpp  fourq_qubic.h  ggwp.cpp  ggwp.h  global.h  hm25.cpp  hm25.h  k12_and_key_utils.h  keyUtils.cpp  (+59 more)
.github/workflows/: cmake-multi-platform.yml  release.yml
arm_compat/: qintrin_neon_shim.h
arm_compat/lib/platform_common/: qintrin.h
oracle_structs/: oracles.h
